# file-matcher-python

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: file_matcher.py
src/filematcher/: __init__.py  file_matcher_api.py  file_matcher_base.py  file_matcher_git.py  file_matcher_python.py
src/orgecc/filematcher/: __init__.py  cli.py  file_matcher_api.py
src/orgecc/filematcher/core/: __init__.py  file_matcher_base.py  file_matcher_ext_gitignorefile.py  file_matcher_ext_pathspec.py  file_matcher_git.py  file_matcher_python.py
src/orgecc/filematcher/filekit/: __init__.py  file_kit.py
src/orgecc/filematcher/patterns/: __init__.py  pattern_kit.py
src/orgecc/filematcher/walker/: __init__.py  directorywalker.py  file_kit.py
tests/: cli_test.py  conftest.py  file_matcher_test.py  filematcher_corpus_test.py  walker_test.py
tests/corpus/: .base-dir.txt  .edge-cases-for-later.txt  cone-patterns.txt  dir-immediate-contents.txt  dir-only-single-asterisk.txt  dir-only.txt  dir-or-file-single-asterisk.txt  dir-or-file.txt  double-asterisks-mixed.txt  double-asterisks.txt  edge-cases.txt  multiple.txt  negation.txt  nested.txt  root.txt  rooted.txt  single-asterisk.txt  wildcards.txt
