[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "orgecc-file-matcher"
dynamic = ["version"]
description = "CLI and library to filter file paths via gitignore rules"
authors = [{ name = "Elifarley", email = "elifarley@gmail.com" }]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules :: gitignore :: wildmatch",
]
keywords = ["gitignore", "git"]
dependencies = [
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/elifarley/file-matcher-python"
Documentation = "https://github.com/elifarley/file-matcher-python#readme"
Repository = "https://github.com/elifarley/file-matcher-python.git"
"Bug Tracker" = "https://github.com/elifarley/file-matcher-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.0.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "coverage>=6.0",
    "tox>=3.24",
    "build>=1.2.2",
    "setuptools-scm>=8.1.0",
]

[project.scripts]
file-matcher = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
# To override version:
# >>> SETUPTOOLS_SCM_PRETEND_VERSION=0.0.2 python -m build
# To dry-run and see version:
# >>> python -m setuptools_scm
write_to = "src/version/_version.py"
# Append .post{number of commits} to your version if there are commits after the last tag.
version_scheme = "post-release"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli", "version", "filematcher*", "directorywalker*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
